# Python_Batyr

./: .gitignore  LICENSE  Procfile  README.md  models.py  pyproject.toml
app/: config.py  dependencies.py  main.py  models.py  scheduler.py  schemas.py  tasks.py  tests.py
app/migrations/: 1_add_field_to_good.py
