[tool.poetry]
name = "Python_Batyr"
version = "0.1.0"
description = ""
authors = ["adikbeka <adletbek9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
pytest = "^7.1.2"
peewee = "^3.15.0"
psycopg2-binary = "^2.9.3"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
